# jansmarkdownkernel

./: README.md  pyproject.toml
example/: example.ipynb
jansmarkdownkernel/: kernel.json
src/jansmarkdownkernel/: __main__.py  install_kernelspec.py  kernel.py
