[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jansmarkdownkernel"
version = "0.0.1"
authors = [
  { name="Jan Arman Parpin", email="is@hidden.com" },
]
description = "A jupyter markdown kernel."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
]
dependencies = [
    "ipykernel",
]

[project.urls]
"Homepage" = "https://github.com/jans-code/jansmarkdownkernel"
"Bug Tracker" = "https://github.com/jans-code/jansmarkdownkernel/issues"

[project.scripts]
jansmarkdownkernel = "jansmarkdownkernel.install_kernelspec:install_kernelspec"